# pyscan

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pyscan.py
doc_src/: Makefile
doc_src/source/: api.rst  installation.rst  scanning.rst  sss.rst
doc_src/source/examples/: TrajectoryFullScanning.ipynb  TrajectoryPartialScanning.ipynb
docs/: api.html  conf.py  discrepancy.bib  examples.html  genindex.html  index.html  index.rst  installation.html  objects.inv  point.html  py-modindex.html  python_utility.html  range.html  scanning.html  search.html  searchindex.js  sss.html  trajectory.html
docs/_modules/: index.html  pyscan.html
docs/_sources/: api.rst.txt  examples.rst.txt  index.rst.txt  range.rst.txt  scanning.rst.txt  trajectory.rst.txt
docs/_sources/examples/: BasicExample.ipynb.txt  TrajectoryApproximation.ipynb.txt
docs/_static/: PhillyCrime.html
docs/examples/: BasicExample.html  PhillyCrime.html  PhilyCrime.ipynb  RegionScanning.html  RegionScanningCont.html  RegionSimplification.html  TrajectoryApproximation.html  TrajectoryFullScanning.html  TrajectoryPartialScanning.html
docs/html/: .buildinfo  PhillyCrime.html  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_modules/: index.html  pyscan.html
docs/html/_sources/: index.rst.txt
docs/html/_sources/examples/: PhillyCrime.ipynb.txt
docs/html/_sources/source/: index.rst.txt
docs/html/examples/: PhillyCrime.html  PhilyCrime.html
docs/html/source/: index.html
docs/source/: api.rst  conf.py  discrepancy.bib  examples.rst  index.rst
docs/source/examples/: BasicExample.ipynb  PhillyCrime.ipynb  RegionScanning.ipynb  RegionScanningCont.ipynb  RegionSimplification.ipynb  TrajectoryPartialScanning.ipynb  region_test.py
include/: AnnuliScanning.hpp  Common.hpp  ConvexHull.hpp  Disk.hpp  DiskScan.hpp  DiskScan2.hpp  FastHalfspace.hpp  FunctionApprox.hpp  Gridding.hpp  HalfSpaceScan.hpp  HamTree.hpp  IntervalScan.hpp  JeffCodes.hpp  KernelScanning.hpp  PartitionSample.hpp  Point.hpp  Range.hpp  RectangleScan.hpp  RegionCoreSet.hpp  Sampling.hpp  SatScan.hpp  Segment.hpp  SparseGrid.hpp  Statistics.hpp  TaylorKernel.hpp  Test_Utilities.hpp  Trajectory.hpp  TrajectoryCoreSet.hpp  TrajectoryScan.hpp  Utilities.hpp
python_scripts/: Cuttings.py  Cuttings_testing.py  MatchedError.py  MaxDiff.py  Partitioning.py  PlotTrapezoid.py  PolyTree.py  SeidelTree (DESKTOP-N341ARE's conflicted copy 2018-02-02).py  SeidelTree.py  Testing.py  TestingCuttings.py  akcan.py  crimeTesting.py  crimeVisualization.py  cutting_plots.py  cuttingsTestingFile.py  geometric.py  line_discrepancy.py  line_testing.py  partitioning.py  partitioning_plots.py  partitioning_tests.py  plotError.py  plotTiming.py  poly_tree.py  sampling.py  seidel_tree.py  test_set.py
src/: AnnuliScanning.cpp  BloomFilter.cpp  BloomFilter.hpp  ConvexHull.cpp  Cuttings.cpp  Cuttings.hpp  DiskScan.cpp  DiskScan.hpp  DiskScan2.cpp  DiskScan2.hpp  EpsSamples.cpp  EpsSamples.hpp  FastHalfspace.cpp  FunctionApprox.cpp  FunctionApprox.hpp  GriddedScanning.hpp  HalfSpaceScan.cpp  HalfplaneScan.cpp  HalfplaneScan.hpp  HamTree.cpp  InOutPoint.cpp  InOutPoint.hpp  IntervalScan.cpp  JeffCodes.cpp  KernelScanning.cpp  PartitionSample.cpp  Point.cpp  Point.hpp  PolyTree.cpp  PolyTree.hpp  RectangleScan.cpp  RectangleScan.hpp  RegionCoreSet.cpp  SatScan.cpp  Segment.cpp  SparseGrid.hpp  Statistics.hpp  TaylorKernel.cpp  Test_Utilities.cpp  TrajectoryCoreSet.cpp  (+7 more)
test/: DiskScan_unittest.cpp  FunctionApprox_unittest.cpp  Halfplane_unittest.cpp  Point_unittest.cpp  RectangleScan_unittest.cpp  Scan_unittest.cpp  Testing.cpp  Utilities.cpp  Utilities.hpp  trajectory_unittest.cpp
